# suss

./: .gitignore  CLI.md  SUSS.md  pyproject.toml
src/suss/: cli.py
src/suss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/suss/commands/: index.py  init.py  testcase.py
src/suss/core/: testcase.py
src/suss/handlers/: drafter.py  indexer.py  initialiser.py  io.py  repo.py
src/suss/misc/: exit_codes.py  save_results.py
